--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ ml-dtypes==0.5.4
 namex==0.1.0
 nest-asyncio==1.6.0
 numpy==2.4.2
+opencv-python==4.13.0.92
 opt-einsum==3.4.0
 optree==0.18.0
 packaging==26.0
